*SVN*

* Use #require_library_or_gem to load the memcache library for the MemCache session and fragment cache stores.  Closes #8662. [Rick]

* Move ActionController::Routing.optimise_named_routes to ActionController::Base.optimise_named_routes.  Now you can set it in the config. [Rick]

  config.action_controller.optimise_named_routes = false

* ActionController::Routing::DynamicSegment#interpolation_chunk should call #to_s on all values before calling URI.escape.  [Rick]

* Only accept session ids from cookies, prevents session fixation attacks.  [bradediger] 

*2.0.0 [Preview Release]* (September 29th, 2007) [Includes duplicates of changes from 1.12.2 - 1.13.3]

* Fixed that render template did not honor exempt_from_layout #9698 [pezra]

* Better error messages if you leave out the :secret option for request forgery protection.  Closes #9670 [rick]

* Allow ability to disable request forgery protection, disable it in test mode by default.  Closes #9693 [lifofifo]

* Avoid calling is_missing on LoadErrors. Closes #7460. [ntalbott]

* Move Railties' Dispatcher to ActionController::Dispatcher, introduce before_ and after_dispatch callbacks, and warm up to non-CGI requests.  [Jeremy Kemper]

* The tag helper may bypass escaping.  [Jeremy Kemper]

* Cache asset ids.  [Jeremy Kemper]

* Optimized named routes respect AbstractRequest.relative_url_root.  #9612 [danielmorrison, Jeremy Kemper]

* Introduce ActionController::Base.rescue_from to declare exception-handling methods. Cleaner style than the case-heavy rescue_action_in_public.  #9449 [norbert]

* Rename some RequestForgeryProtection methods.  The class method is now #protect_from_forgery, and the default parameter is now 'authenticity_token'.  [Rick]

* Merge csrf_killer plugin into rails.  Adds RequestForgeryProtection model that verifies session-specific _tokens for non-GET requests.  [Rick]
